@@ -31,8 +31,8 @@ by.default <- function(data, INDICES, FUN, ..., simplify = TRUE)
         } else IND <- INDICES
         FUNx <- function(x) FUN(dd[x,], ...)
         nd <- nrow(dd)
-        ans <- eval(substitute(tapply(1L:nd, IND, FUNx, simplify = simplify)),
-                    dd)
+        ans <- eval(substitute(tapply(seq_len(nd), IND, FUNx,
+                                      simplify = simplify)), dd)
         attr(ans, "call") <- match.call()
         class(ans) <- "by"
         ans
@@ -48,7 +48,8 @@ by.data.frame <- function(data, INDICES, FUN, ..., simplify = TRUE)
     } else IND <- INDICES
     FUNx <- function(x) FUN(data[x,, drop=FALSE], ...) # (PR#10506)
     nd <- nrow(data)
-    ans <- eval(substitute(tapply(1L:nd, IND, FUNx, simplify = simplify)), data)
+    ans <- eval(substitute(tapply(seq_len(nd), IND, FUNx,
+                                  simplify = simplify)), data)
     attr(ans, "call") <- match.call()
     class(ans) <- "by"
     ans
